feat: add search by users
